--- a/Web4/Login/Login.html
+++ b/Web4/Login/Login.html
@@ -23,7 +23,7 @@ TTopBarLogin
 <div class="navbar navbar-{{:~CourseMeta.navBar()}} lm-header">
   <div class="container">
     <ul class="nav pull-right"></ul>
-    <a href="#" class="lm-logo-black" onmousedown="lmConsole.sendStart(this)" onmouseup="lmConsole.sendEnd(this)"></a>
+    <a href="#" class="lm-logo-black" onmousedown="lmConsole.sendStart(this)" onmouseup="lmConsole.sendEnd(this)" data-bind="click: Pager.gotoHomeUrl"></a>
   </div>
 </div>
 
