--- a/Web4/Schools/TopBar.html
+++ b/Web4/Schools/TopBar.html
@@ -5,7 +5,7 @@ TTopBarNew
     <%-- ******************* LEVA CAST ************* --%>
     <%-- logo --%>
     {{if tb.logoBig()}}
-    <a href="#" class="navbar-brand lm-logo-black" onmousedown="lmConsole.sendStart(this)" onmouseup="lmConsole.sendEnd(this)"></a>
+    <a href="#" class="navbar-brand lm-logo-black" onmousedown="lmConsole.sendStart(this)" onmouseup="lmConsole.sendEnd(this)" data-bind="click: Pager.gotoHomeUrl"></a>
     {{else tb.logoSmall()}}
     <a href="#" class="navbar-brand lm-logo-black lm-logo-black-small"></a>
     {{/if}}
