--- a/Blended/app/Pages/demopages-lesson.html
+++ b/Blended/app/Pages/demopages-lesson.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col-sm-3">
           <div class="text-center">
-            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'/lm/blended/english/lessons/lesson_a1_1/listening'})">
+            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'@lm@blended@english@lessons@lesson_a1_1@listening'})">
               <i class="fa fa-play"></i>
               Spustit
             </a>
@@ -44,7 +44,7 @@
         </div>
         <div class="col-sm-3">
           <div class="text-center">
-            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'/lm/blended/english/lessons/lesson_a1_1/vocabulary'})">
+            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'@lm@blended@english@lessons@lesson_a1_1@vocabulary'})">
               <i class="fa fa-play"></i>
               Spustit
             </a>
@@ -68,7 +68,7 @@
          </div>
         <div class="col-sm-3">
           <div class="text-center">
-            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'/lm/blended/english/lessons/lesson_a1_1/listenandtalk'})">
+            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'@lm@blended@english@lessons@lesson_a1_1@listenandtalk'})">
               <i class="fa fa-play"></i>
               Spustit
             </a>
@@ -92,7 +92,7 @@
         </div>
         <div class="col-sm-3">
           <div class="text-center">
-            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'/lm/blended/english/lessons/lesson_a1_1/readandspeak'})">
+            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'@lm@blended@english@lessons@lesson_a1_1@readandspeak'})">
               <i class="fa fa-play"></i>
               Spustit
             </a>
@@ -116,7 +116,7 @@
         </div>
         <div class="col-sm-3">
           <div class="text-center">
-            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'/lm/blended/english/lessons/lesson_a1_1/roleplaying'})">
+            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'@lm@blended@english@lessons@lesson_a1_1@roleplaying'})">
               <i class="fa fa-play"></i>
               Spustit
             </a>
@@ -140,7 +140,7 @@
         </div>
         <div class="col-sm-3">
           <div class="text-center">
-            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'/lm/blended/english/lessons/lesson_a1_1/sentenceordering'})">
+            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'@lm@blended@english@lessons@lesson_a1_1@sentenceordering'})">
               <i class="fa fa-play"></i>
               Spustit
             </a>
@@ -163,7 +163,7 @@
         </div>
         <div class="col-sm-3">
           <div class="text-center">
-            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'/lm/blended/english/lessons/lesson_a1_1/gapfilldropdown'})">
+            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'@lm@blended@english@lessons@lesson_a1_1@gapfilldropdown'})">
               <i class="fa fa-play"></i>
               Spustit
             </a>
@@ -186,7 +186,7 @@
         </div>
         <div class="col-sm-3">
           <div class="text-center">
-            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'/lm/blended/english/lessons/lesson_a1_1/textselection'})">
+            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'@lm@blended@english@lessons@lesson_a1_1@textselection'})">
               <i class="fa fa-play"></i>
               Spustit
             </a>
@@ -209,7 +209,7 @@
         </div>
         <div class="col-sm-3">
           <div class="text-center">
-            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'/lm/blended/english/lessons/lesson_a1_1/wordordering'})">
+            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'@lm@blended@english@lessons@lesson_a1_1@wordordering'})">
               <i class="fa fa-play"></i>
               Spustit
             </a>
@@ -232,7 +232,7 @@
         </div>
         <div class="col-sm-3">
           <div class="text-center">
-            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'/lm/blended/english/lessons/lesson_a1_1/gapfill'})">
+            <a class="btn btn-lg btn-success" ui-sref="runex({configid: 'lessons', file:'@lm@blended@english@lessons@lesson_a1_1@gapfill'})">
               <i class="fa fa-play"></i>
               Spustit
             </a>
