--- a/Blended/app/Pages/demosound-lang-level-file.html
+++ b/Blended/app/Pages/demosound-lang-level-file.html
@@ -1,3 +1,3 @@
 ﻿<div class="container">
-  <iframe iframedirective="{{authorUrl}}" ></iframe> 
+  <iframe data-iframe-directive="" data-iframe-src="{{authorUrl}}" ></iframe> 
 </div>
