--- a/Web4/BlendedAPI/vyzva/ViewParts/Toolbar/Toolbar.html
+++ b/Web4/BlendedAPI/vyzva/ViewParts/Toolbar/Toolbar.html
@@ -2,14 +2,14 @@
   <div class="container">
     <div class="content lm-logo-black-small" data-ng-click="ts.gotoHomeUrl()">
     </div>
-    <div data-ng-include="ts.dataToolbarType"></div>
+    <div data-ng-include="::ts.dataToolbarType"></div>
   </div>
 </div>
 <div class="container">
   <ol class="breadcrumb">
-    <li data-ng-repeat="item in ts.breadcrumb" data-ng-class="{'active': item.active}">
-      <a data-ng-if="!item.active" data-ng-href="{{item.url}}">{{item.title}}</a>
-      <span data-ng-if="item.active">{{item.title}}</span>
+    <li data-ng-repeat="item in ::ts.breadcrumb" data-ng-class="::{'active': item.active}">
+      <a data-ng-if="::!item.active" data-ng-href="{{::item.url}}">{{::item.title}}</a>
+      <span data-ng-if="::item.active">{{::item.title}}</span>
     </li>
   </ol>
 </div>
