--- a/Blended/app/Pages/index - Copy.html
+++ b/Blended/app/Pages/index - Copy.html
@@ -1,67 +1,50 @@
 ﻿<div class="alert advertise">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 text-center" style="color:yellow">
-        <h1 style="color:yellow">Novinka: licence k výuce na neomezenou dobu</h1>
-        Na základě pozitivní reakce škol rozšiřujeme naši nabídku.
-        <br />
-        <br />
-        <h4 style="color:yellow; text-decoration:underline">Platí naše původní nabídka a navíc za příplatek nabízíme:</h4>
-        <br />
+      <div class="col-sm-1" style="padding-top:70px">
+        <i class="fa fa-exclamation text-info" style="font-size:100px;"></i><br />
       </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-5 left-part">
-        <h4 style="color:yellow; text-decoration:underline">Časově neomezený provoz výuky na serveru školy</h4>
+      <div class="col-sm-4 left-part">
+        <h1>Výzva 57 MŠMT</h1>
         <ul class="fa-ul">
-          <li><i class="fa-li fa fa-check"></i>výukovou aplikaci nainstalujeme na Váš server</li>
-          <li><i class="fa-li fa fa-check"></i>po nainstalování budete mít možnost aplikaci provozovat po neomezenou dobu</li>
-          <li><i class="fa-li fa fa-check"></i>vše v rámci finančních limitů, určených pro Výzvu 57</li>
-          <li><i class="fa-li fa fa-check"></i>vyžadován je Microsoft Windows ASP.NET server</li>
+          <!--<li><i class="fa-li fa fa-check"></i>Pokrývá všechny požadavky <a ui-sref="vyzva57">Výzvy 57 MŠMT</a></li>-->
+          <li><i class="fa-li fa fa-check"></i>Přirozený způsob osvojování cizího jazyka</li>
+          <li><i class="fa-li fa fa-check"></i>Blended learning výuka s podporou učitele</li>
+          <li><i class="fa-li fa fa-check"></i>Velké množství výukových materiálů s <a ui-sref="demopages.lesson">mnoha druhy aktivit</a></li>
+          <li><i class="fa-li fa fa-check"></i><a ui-sref="demopages.pretest">Adaptabilní vstupní test</a> dle metodiky SERR (úrovně A1, A2, B1, B2)</li>
+          <li><i class="fa-li fa fa-check"></i><a ui-sref="demopages.test">Průběžné testy</a>, monitorující pokrok ve výuce</li>
         </ul>
       </div>
-      <div class="col-sm-1" style="padding-top:50px">
+      <div class="col-sm-1" style="padding-top:90px">
         <i class="fa fa-ellipsis-v" style="font-size:60px"></i>
       </div>
       <div class="col-sm-5">
-        <h4 style="color:yellow; text-decoration:underline">Licence až do 31.8.2019 na serveru LANGMaster</h4>
+        <br />
         <ul class="fa-ul">
-          <li><i class="fa-li fa fa-check"></i>v rámci finančních limitů (určených pro Výzvu 57) nabízíme provoz až do 31.8.2019</li>
+          <li><i class="fa-li fa fa-check"></i>Možnost opakovaného nahrávání vlastního ústního projevu</li>
+          <li><i class="fa-li fa fa-check"></i>Opakované přehrávání (poslech) vlastních nahrávek</li>
+          <li><i class="fa-li fa fa-check"></i>Porovnání vlastních nahrávek s nahrávkami rodilých mluvčích (Listen&nbsp;&&nbsp;Talk)</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Online přístup učitele:
+            <ul>
+              <li>ke všem nahrávkám studenta</li>
+              <li>k podrobným údajům o průchodu kurzem</li>
+            </ul>
+          </li>
         </ul>
+      </div>
+      <div class="col-sm-1 text-info" style="padding-top:70px">
+        <i class="fa fa-exclamation" style="font-size:100px"></i><br />
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 text-center" style="padding-top:10px;">
-        <b style="color:yellow">
-          Vyžádejte si modifikovanou cenovou nabídku na <a href="mailto:info@langmaster.cz">info@langmaster.cz</a>.
+        <b>
+          <i class="fa fa-quote-left"></i>
+          NENÍ DŮLEŽITÉ UMĚT VYPLŇOVAT CVIČENÍ. DŮLEŽITÉ JE UMĚT SE DOROZUMĚT V CIZOJAZYČNÉM PROSTŘEDÍ!
+          <i class="fa fa-quote-right"></i>
         </b>
-      </div>
-    </div>
-    <hr style="border-color:yellow" />
-    <div class="row">
-      <div class="col-sm-12 text-center" style="color:yellow">
-        <h3 style="color:yellow; margin-top:0px;">Doplnění informací: Jednoduchá aplikace, jejíž obsluhu zvládne každý</h3>
-        Z pohledu uživatele (jak studenta tak učitele) se jedná o velice jednoduchou aplikaci s minimem intuitivních ovládacích prvků.
-        <br />
-        <br />
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-offset-3 col-sm-8">
-        <h4>
-          Nejdůležitější činnosti učitele v aplikaci jsou:
-        </h4>
-        <ul>
-          <li><i class="fa-li fa fa-check"></i>na začátku rozdá licenční klíče svým studentům</li>
-          <li><i class="fa-li fa fa-check"></i>v průběhu výuky prohlíží výsledky cvičení a testů studentů</li>
-          <li><i class="fa-li fa fa-check"></i>několikrát v průběhu výuky ohodnotí mluvený projev studentů v Kontrolních testech</li>
-        </ul>
-        Všechny tyto činnosti jsou v aplikaci dostupné na třech jednoduchých stránkách. Po zalogování do aplikace je každá z těchto stránek dostupná na <b>2-3 kliknutí myši</b>.
-        <!--<br />
-        <br />
-        <div style="color:yellow; font-weight:bold;">
-          Stáhněte si <a href="#">screenshoty aplikace</a>.
-        </div>-->
       </div>
     </div>
   </div>
@@ -285,7 +268,7 @@
               Pokud se vám systém zalíbí, můžeme vám zdarma prodloužit licenci do konce školního roku.
             </li>
             <li>
-              Pomocí našeho autorského nástroje si můžete snadno připravovat vlastní výuková data
+              Pomocí našeho autorského nástroje si můžete snadno připravovat vlastní výuková data 
               jak pro tento systém, tak i pro vlastní kurzy a testy.
             </li>
             <li>
