--- a/Web4/Courses/mediaBackup.html
+++ b/Web4/Courses/mediaBackup.html
@@ -130,17 +130,19 @@ c_recording
   {{if isHumanEvalMode()}}
   <div class="alert alert-default lector">
     <form id="form-{{:id}}" class="human-form form-inline has-error">
-      <div data-bind="visible: !_myPage.blendedExtension">
+      <h5>{{:~CSLocalize(null, 'Lector evaluation')}}:</h5>
+      <div>
         <div data-bind="visible:humanLevel">{{:~CSLocalize('99eed25487184fe195aa42fa3b390d4f', 'Test level')}}: <b><span data-bind="text:humanLevel"></span></b></div>
         <div data-bind="visible:humanHelpTxt">{{:~CSLocalize('5598d88071e7473c81f51a42a5f689eb', 'Recorded (recommended / actual):')}} <b><span data-bind="text:humanHelpTxt"></span></b></div>
       </div>
       <div class="input-group">
         <span class="input-group-addon">Hodnocení:</span>
-        <input type="text" class="form-control" id="human-ed-{{:id}}" name="human-ed-{{:id}}" placeholder="0-100" data-bind="textInput:human" />
-        <!--<span class="input-group-addon">0-100</span>-->
+        <input type="text" class="form-control" id="human-ed-{{:id}}" name="human-ed-{{:id}}" placeholder="0-{{:scoreWeight}}" data-bind="textInput:human" />
+        <span class="input-group-addon">0-{{:scoreWeight}}</span>
       </div>
     </form>
   </div>
+  <br />
   {{/if}}
   <div class="ff-content-progress">
     <div class="content-inner">
