--- a/Blended/app/Pages/index.html
+++ b/Blended/app/Pages/index.html
@@ -1,76 +1,101 @@
 ﻿<div class="alert advertise">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 text-center" style="color:yellow">
-        <h1 style="color:yellow">Novinka: licence k výuce na neomezenou dobu</h1>
-        Na základě pozitivní reakce škol rozšiřujeme naši nabídku.
-        <br />
-        <br />
-        <h4 style="color:yellow; text-decoration:underline">Platí naše původní nabídka a navíc za příplatek nabízíme:</h4>
-        <br />
+      <div class="col-sm-1" style="padding-top:70px">
+        <i class="fa fa-exclamation text-info" style="font-size:100px;"></i><br />
       </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-5 left-part">
-        <h4 style="color:yellow; text-decoration:underline">Časově neomezený provoz výuky na serveru školy</h4>
+      <div class="col-sm-4 left-part">
+        <h1>Výzva 57 MŠMT</h1>
         <ul class="fa-ul">
-          <li><i class="fa-li fa fa-check"></i>výukovou aplikaci nainstalujeme na Váš server</li>
-          <li><i class="fa-li fa fa-check"></i>po nainstalování budete mít možnost aplikaci provozovat po neomezenou dobu</li>
-          <li><i class="fa-li fa fa-check"></i>vše v rámci finančních limitů, určených pro Výzvu 57</li>
-          <li><i class="fa-li fa fa-check"></i>vyžadován je Microsoft Windows ASP.NET server</li>
+          <!--<li><i class="fa-li fa fa-check"></i>Pokrývá všechny požadavky <a ui-sref="vyzva57">Výzvy 57 MŠMT</a></li>-->
+          <li><i class="fa-li fa fa-check"></i>Přirozený způsob osvojování cizího jazyka</li>
+          <li><i class="fa-li fa fa-check"></i>Blended learning výuka s podporou učitele</li>
+          <li><i class="fa-li fa fa-check"></i>Velké množství výukových materiálů s <a ui-sref="demopages.lesson">mnoha druhy aktivit</a></li>
+          <li><i class="fa-li fa fa-check"></i><a ui-sref="demopages.pretest">Adaptabilní vstupní test</a> dle metodiky SERR (úrovně A1, A2, B1, B2)</li>
+          <li><i class="fa-li fa fa-check"></i><a ui-sref="demopages.test">Průběžné testy</a>, monitorující pokrok ve výuce</li>
         </ul>
       </div>
-      <div class="col-sm-1" style="padding-top:50px">
+      <div class="col-sm-1" style="padding-top:90px">
         <i class="fa fa-ellipsis-v" style="font-size:60px"></i>
       </div>
       <div class="col-sm-5">
-        <h4 style="color:yellow; text-decoration:underline">Licence až do 31.8.2019 na serveru LANGMaster</h4>
+        <br />
         <ul class="fa-ul">
-          <li><i class="fa-li fa fa-check"></i>v rámci finančních limitů (určených pro Výzvu 57) nabízíme provoz až do 31.8.2019</li>
+          <li><i class="fa-li fa fa-check"></i>Možnost opakovaného nahrávání vlastního ústního projevu</li>
+          <li><i class="fa-li fa fa-check"></i>Opakované přehrávání (poslech) vlastních nahrávek</li>
+          <li><i class="fa-li fa fa-check"></i>Porovnání vlastních nahrávek s nahrávkami rodilých mluvčích (Listen&nbsp;&&nbsp;Talk)</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Online přístup učitele:
+            <ul>
+              <li>ke všem nahrávkám studenta</li>
+              <li>k podrobným údajům o průchodu kurzem</li>
+            </ul>
+          </li>
         </ul>
+      </div>
+      <div class="col-sm-1 text-info" style="padding-top:70px">
+        <i class="fa fa-exclamation" style="font-size:100px"></i><br />
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 text-center" style="padding-top:10px;">
-        <b style="color:yellow">
-          Vyžádejte si modifikovanou cenovou nabídku na <a href="mailto:info@langmaster.cz">info@langmaster.cz</a>.
+        <b>
+          <i class="fa fa-quote-left"></i>
+          NENÍ DŮLEŽITÉ UMĚT VYPLŇOVAT CVIČENÍ. DŮLEŽITÉ JE UMĚT SE DOROZUMĚT V CIZOJAZYČNÉM PROSTŘEDÍ!
+          <i class="fa fa-quote-right"></i>
         </b>
-      </div>
-    </div>
-    <hr style="border-color:yellow" />
-    <div class="row">
-      <div class="col-sm-12 text-center" style="color:yellow">
-        <h3 style="color:yellow; margin-top:0px;">Doplnění informací: Jednoduchá aplikace, jejíž obsluhu zvládne každý</h3>
-        Z pohledu uživatele (jak studenta tak učitele) se jedná o velice jednoduchou aplikaci s minimem intuitivních ovládacích prvků.
-        <br />
-        <br />
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-offset-3 col-sm-8">
-        <h4>
-          Nejdůležitější činnosti učitele v aplikaci jsou:
-        </h4>
-        <ul>
-          <li><i class="fa-li fa fa-check"></i>na začátku rozdá licenční klíče svým studentům</li>
-          <li><i class="fa-li fa fa-check"></i>v průběhu výuky prohlíží výsledky cvičení a testů studentů</li>
-          <li><i class="fa-li fa fa-check"></i>několikrát v průběhu výuky ohodnotí mluvený projev studentů v Kontrolních testech</li>
-        </ul>
-        Všechny tyto činnosti jsou v aplikaci dostupné na třech jednoduchých stránkách. Po zalogování do aplikace je každá z těchto stránek dostupná na <b>2-3 kliknutí myši</b>.
-        <!--<br />
-        <br />
-        <div style="color:yellow; font-weight:bold;">
-          Stáhněte si <a href="#">screenshoty aplikace</a>.
-        </div>-->
       </div>
     </div>
   </div>
 </div>
+
+<div class="container-fluid">
+  <div class="container">
+    <!--<h2>Nekupujte "zajíce v pytli"</h2>-->
+    <div class="col-sm-6">
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <h4>Nekupujte "zajíce v pytli"</h4>
+        </div>
+        <div class="panel-body">
+          <p>Nabízíme možnost <b>zdarma si vyzkoušet ostrou verzi našich kurzů.</b></p>
+          <p>Můžete tak sami zjistit, že <b>výuka je jednoduchá a zábavná</b>. A že samozřejmě splňuje všechny podmínky Výzvy 57 MŠMT.</p>
+          <p>Kontaktujte nás na <a href="mailto:info@langmaster.cz">info@langmaster.cz</a> a my vám pošleme přístupové údaje.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <h4>31. 12. 2015 spolupráce nekončí</h4>
+        </div>
+        <div class="panel-body">
+          <ul>
+            <li>
+              Pokud se vám systém zalíbí, můžeme vám zdarma prodloužit licenci do konce školního roku (tj. do 31.8.2016).
+            </li>
+            <li>
+              Dále nabízíme Prodloužené licence (až do konce školního roku <b>2018/2019</b>) nebo Unlimited licence.
+              <!--Pomocí našeho autorského nástroje si můžete snadno připravovat vlastní výuková data
+              jak pro tento systém, tak i pro vlastní kurzy a testy.-->
+            </li>
+            <li>
+              Nabízíme i mnoho dalších jazykových kurzů a testů.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="container-fluid white">
   <div class="container">
-    <h2>Přirozený způsob osvojování cizího jazyka</h2>
+    <h2>Přirozený a zábavný způsob osvojování cizího jazyka</h2>
     <div class="col-sm-6">
-      <div class="panel panel-default">
+      <div class="panel panel-success">
         <div class="panel-heading">
           Použitá <b>výuková metoda</b> vychází z moderní <a href="http://www.jazyky-pechova.cz/metody-vyuky-/" target="_blank">audio-orální (audio-lingvální) a komunikativní metody</a>
         </div>
@@ -81,7 +106,7 @@
       </div>
     </div>
     <div class="col-sm-6">
-      <div class="panel panel-default">
+      <div class="panel panel-success">
         <div class="panel-body">
           <p>
             Častým opakováním a napodobováním slyšeného vzoru (prezentovaného <em>kvalitní nahrávkou rodilého mluvčího</em>)
@@ -93,56 +118,12 @@
     </div>
   </div>
 </div>
-<div class="container-fluid gray">
-  <div class="container">
-    <h3><b>Výzva 57 MŠMT:</b> finanční prostředky na výuku i na odměny učitelům</h3>
-    <p>Výuková aplikace pokrývá požadavky pro <span class="label label-warning"><b>Šablonu č. 3</b></span> a <span class="label label-warning"><b>Šablonu č. 4</b></span> <a ui-sref="vyzva57">Výzvy 57 MŠMT</a>.</p>
-    <div class="col-sm-6">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          Z výzvy je možné financovat:
-        </div>
-        <div class="panel-body">
-          <ul class="fa-ul">
-            <li><i class="fa-li fa fa-check"></i>nákup licencí k online výuce</li>
-            <li><i class="fa-li fa fa-check"></i>odměny učitelům za inovativní přístup k výuce</li>
-            <li><i class="fa-li fa fa-check"></i>odměny projektového managera</li>
-            <li><i class="fa-li fa fa-check"></i>sluchátka a mikrofony ke školním počítačům</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          Minimální náročnost projektu:
-        </div>
-        <div class="panel-body">
-          <ul class="fa-ul">
-            <li><i class="fa-li fa fa-check"></i>Vyplnění žádosti v systému Benefit.</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>V Benefitu stačí vybrat jednu nebo více šablon:
-              <ul>
-                <li>výuka žáků (rozpočet Kč 49 860.- na skupinu 20 žáků)</li>
-                <li>další vzdělávání učitelů (rozpočet Kč 6 544.- na jednoho učitele)</li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <p class="text-center">
-      Přečtěte si, jak naše řešení <a ui-sref="vyzva57">splňuje požadavky na výukový systém pro žáky i další vzdělávání učitelů</a>.
-      Viz též <a target="_blank" href="http://www.op-vk.cz/cs/zadatel/vyzvy-op-vk/vyzvy-op-vk/nove-vyzvy/vyzvy-ipo/vyhlaseni-vyzvy-k-predkladani-individualnich-projektu-ostatnich-oblast-podpory-1-1-1.html">Vyhlášení výzvy na webu MŠMT</a>.
-    </p>
-  </div>
-</div>
 
 <div class="container-fluid gray">
   <div class="container index-pruchod">
     <h2>Průchod kurzem</h2>
     <div class="col-sm-3">
-      <div class="panel panel-default">
+      <div class="panel panel-success">
         <div class="panel-body">
           <div class="embed-responsive embed-responsive-schema">
             <a ui-sref="embed({src: 'app/img/schema.png', ratio:'embed-responsive-schema', columns:'col-md-offset-2 col-md-8'})"><img class="embed-responsive-item" src="app/img/schema.png" /></a>
@@ -152,7 +133,7 @@
       </div>
     </div>
     <div class="col-sm-9">
-      <div class="panel panel-default">
+      <div class="panel panel-success">
         <div class="panel-heading">
           Popis:
         </div>
@@ -190,7 +171,7 @@
   <div class="container">
     <h3>Využití Blended Learningu a problém vyhodnocení mluveného projevu</h3>
     <div class="col-sm-6">
-      <div class="panel panel-default">
+      <div class="panel panel-success">
         <div class="panel-heading">
           Zapojení učitele do výuky
         </div>
@@ -212,7 +193,7 @@
       </div>
     </div>
     <div class="col-sm-6">
-      <div class="panel panel-default">
+      <div class="panel panel-success">
         <div class="panel-heading">
           Jak na počítači ohodnotit mluvený projev?
         </div>
@@ -228,26 +209,16 @@
       </div>
     </div>
   </div>
+
+
 </div>
 
-<!--<div class="container-fluid gray">
-  <div class="container">
-    <h2>Adaptabilní vstupní testy</h2>
-    <span class="label label-danger">TODO</span>
-  </div>
-</div>-->
-<!--<div class="container-fluid white">
-  <div class="container">
-    <h2>Přístup učitele ke všem výsledkům práce studenta</h2>
-    <span class="label label-danger">TODO</span>
-  </div>
-</div>-->
 <div class="container-fluid gray">
   <div class="container">
     <h2>Velké množství výukových materiálů</h2>
 
     <div class="col-sm-6">
-      <div class="panel panel-default">
+      <div class="panel panel-success">
         <div class="panel-body">
           <ul>
             <li><span class="badge badge-l">3</span> Vstupní adaptabilní testy (každý obsahuje 4 části - A1, A2, B1 a B2)</li>
@@ -259,7 +230,7 @@
       </div>
     </div>
     <div class="col-sm-6">
-      <div class="panel panel-default">
+      <div class="panel panel-success">
         <div class="panel-body">
           <ul>
             <li><span class="badge badge-l">222</span> zvukových nahrávek (dialogy nahrané rodilými mluvčími)</li>
@@ -271,30 +242,51 @@
     </div>
   </div>
 </div>
-<div class="container-fluid">
+
+<div class="container-fluid gray">
   <div class="container">
-    <h2>31. 12. 2015 spolupráce nekončí</h2>
-    <div class="col-md-offset-3 col-sm-6">
-      <div class="panel panel-default">
+    <h3><b>Výzva 57 MŠMT:</b> finanční prostředky na výuku i na odměny učitelům</h3>
+    <p>Naše výuková aplikace pokrývá požadavky pro <b>Šablonu č. 3</b> <b>Šablonu č. 4</b> <a ui-sref="vyzva57">Výzvy 57 MŠMT</a>.</p>
+    <div class="col-sm-6">
+      <div class="panel panel-success">
         <div class="panel-heading">
-          Nabízíme další možnosti spolupráce
+          Z výzvy je možné financovat:
         </div>
         <div class="panel-body">
-          <ul>
+          <ul class="fa-ul">
+            <li><i class="fa-li fa fa-check"></i>nákup licencí k online výuce</li>
+            <li><i class="fa-li fa fa-check"></i>odměny učitelům za inovativní přístup k výuce</li>
+            <li><i class="fa-li fa fa-check"></i>odměny projektového managera</li>
+            <li><i class="fa-li fa fa-check"></i>sluchátka a mikrofony ke školním počítačům</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          Minimální náročnost projektu:
+        </div>
+        <div class="panel-body">
+          <ul class="fa-ul">
+            <li><i class="fa-li fa fa-check"></i>Vyplnění žádosti v systému Benefit.</li>
             <li>
-              Pokud se vám systém zalíbí, můžeme vám zdarma prodloužit licenci do konce školního roku.
-            </li>
-            <li>
-              Pomocí našeho autorského nástroje si můžete snadno připravovat vlastní výuková data
-              jak pro tento systém, tak i pro vlastní kurzy a testy.
-            </li>
-            <li>
-              Nabízíme i mnoho dalších jazykových kurzů a testů.
+              <i class="fa-li fa fa-check"></i>V Benefitu stačí vybrat jednu nebo více šablon:
+              <ul>
+                <li>výuka žáků (rozpočet Kč 49 860.- na skupinu 20 žáků)</li>
+                <li>další vzdělávání učitelů (rozpočet Kč 6 544.- na jednoho učitele)</li>
+              </ul>
             </li>
           </ul>
         </div>
       </div>
     </div>
+    <p class="text-center">
+      Přečtěte si, jak naše řešení <a ui-sref="vyzva57">splňuje požadavky na výukový systém pro žáky i další vzdělávání učitelů</a>.
+      <!--Viz též <a target="_blank" href="http://www.op-vk.cz/cs/zadatel/vyzvy-op-vk/vyzvy-op-vk/nove-vyzvy/vyzvy-ipo/vyhlaseni-vyzvy-k-predkladani-individualnich-projektu-ostatnich-oblast-podpory-1-1-1.html">Vyhlášení výzvy na webu MŠMT</a>.-->
+    </p>
   </div>
 </div>
+
+
 
