before RUN route

--- a/Blended/app/Pages/index.html
+++ b/Blended/app/Pages/index.html
@@ -100,7 +100,7 @@
           Použitá <b>výuková metoda</b> vychází z moderní <a href="http://www.jazyky-pechova.cz/metody-vyuky-/" target="_blank">audio-orální (audio-lingvální) a komunikativní metody</a>
         </div>
         <div class="panel-body">
-          V rámci této metody je jazyk vnímám jako prostředek komunikace a dovednost, kterou si člověk intuitivně osvojuje opakovaným
+          V rámci této metody je jazyk vnímán jako prostředek komunikace a dovednost, kterou si člověk intuitivně osvojuje opakovaným
           ústním napodobováním slyšených vzorů v různých situacích.
         </div>
       </div>
@@ -246,11 +246,11 @@
 <div class="container-fluid gray">
   <div class="container">
     <h3><b>Výzva 57 MŠMT:</b> finanční prostředky na výuku i na odměny učitelům</h3>
-    <p>Naše výuková aplikace pokrývá požadavky pro <b>Šablonu č. 3</b> <b>Šablonu č. 4</b> <a ui-sref="vyzva57">Výzvy 57 MŠMT</a>.</p>
+    <p>Naše výuková aplikace pokrývá požadavky pro <b>Šablonu č. 3</b> a <b>Šablonu č. 4</b> <a ui-sref="vyzva57">Výzvy 57 MŠMT</a>.</p>
     <div class="col-sm-6">
       <div class="panel panel-success">
         <div class="panel-heading">
-          Z výzvy je možné financovat:
+          Z Výzvy je možné financovat:
         </div>
         <div class="panel-body">
           <ul class="fa-ul">
