--- a/Blended/app/Pages/index.html
+++ b/Blended/app/Pages/index.html
@@ -1,26 +1,81 @@
 ﻿<div class="alert advertise">
   <div class="container">
     <div class="row">
-      <div class="col-sm-1" style="padding-top:70px">
+      <div class="col-sm-1" style="padding-top:170px">
         <i class="fa fa-exclamation text-info" style="font-size:100px;"></i><br />
       </div>
-      <div class="col-sm-4 left-part">
-        <h1>Výzva 57 MŠMT</h1>
-        <ul class="fa-ul">
-          <!--<li><i class="fa-li fa fa-check"></i>Pokrývá všechny požadavky <a ui-sref="vyzva57">Výzvy 57 MŠMT</a></li>-->
+      <h1 class="text-center">Výzva 57 MŠMT - nekupujte "zajíce v pytli"</h1>
+      <h4 class="text-center">Vyzkoušejte naše řešení a ujistěte se, že splňujeme všechny podmínky Výzvy 57</h4>
+      <div class="text-center">Napiště nám na <a href="mailto:info@langmaster.cz">info@langmaster.cz</a> nebo zavolejte +420 244 460 807</div>
+      <br />
+      <div class="col-sm-4 left-part" >
+        <h4>Ceník standardní licence (platné do 31.8.2016)</h4>
+        <table class="table table-bordered" style="color:#333">
+          <tr class="success" style="font-weight:bold;">
+            <td>Šablona</td>
+            <td>Cena v Kč s DPH</td>
+          </tr>
+          <tr class="warning">
+            <td>Studenti (č. 4)</td>
+            <td style="text-align:right; font-weight:bold;">18 490</td>
+          </tr>
+          <tr class="warning">
+            <td>Učitelé (č. 3)</td>
+            <td style="text-align:right; font-weight:bold;">3 499</td>
+          </tr>
+        </table>
+        <!--<ul class="fa-ul">
           <li><i class="fa-li fa fa-check"></i>Přirozený způsob osvojování cizího jazyka</li>
           <li><i class="fa-li fa fa-check"></i>Blended learning výuka s podporou učitele</li>
           <li><i class="fa-li fa fa-check"></i>Velké množství výukových materiálů s <a ui-sref="demopages.lesson">mnoha druhy aktivit</a></li>
           <li><i class="fa-li fa fa-check"></i><a ui-sref="demopages.pretest">Adaptabilní vstupní test</a> dle metodiky SERR (úrovně A1, A2, B1, B2)</li>
           <li><i class="fa-li fa fa-check"></i><a ui-sref="demopages.test">Průběžné testy</a>, monitorující pokrok ve výuce</li>
-        </ul>
+        </ul>-->
       </div>
-      <div class="col-sm-1" style="padding-top:90px">
+      <div class="col-sm-1" style="padding-top:90px; padding-left:40px;">
         <i class="fa fa-ellipsis-v" style="font-size:60px"></i>
       </div>
       <div class="col-sm-5">
-        <br />
-        <ul class="fa-ul">
+        <h4>Speciální nabídka dlouhodobých licencí</h4>
+        <table class="table table-bordered">
+          <tr class="success" style="font-weight:bold;">
+            <td>Šablona</td>
+            <td>Licence na...</td>
+            <td>Cena v Kč s DPH</td>
+            <td>Server</td>
+          </tr>
+          <tr class="warning">
+            <td>Studenti</td>
+            <td>2 roky</td>
+            <td style="text-align:right">26 280</td>
+            <td style="text-align:right; font-weight:bold;">LANGMaster</td>
+          </tr>
+          <tr class="warning">
+            <td>Studenti</td>
+            <td>3 roky</td>
+            <td style="text-align:right">32 580</td>
+            <td style="text-align:right; font-weight:bold;">LANGMaster</td>
+          </tr>
+          <tr class="warning">
+            <td>Studenti</td>
+            <td>4 roky</td>
+            <td style="text-align:right">38 880</td>
+            <td style="text-align:right; font-weight:bold;">LANGMaster</td>
+          </tr>
+          <tr class="warning">
+            <td>Studenti</td>
+            <td>neomezeně</td>
+            <td style="text-align:right">38 880</td>
+            <td style="text-align:right; font-weight:bold;">Poskytne škola</td>
+          </tr>
+        </table>
+        <!--<b>(*)</b> poznámky k neomezené licenci:
+        <ul>
+          <li>instalace výukové aplikace na server, poskytnutý školou, je v ceně</li>
+          <li>vyžadován je Microsoft Windows ASP. NET server</li>
+          <li>do 31. 8. 2016 je možný provoz na serverech LANGMaster</li>
+        </ul>-->
+        <!--<ul class="fa-ul">
           <li><i class="fa-li fa fa-check"></i>Možnost opakovaného nahrávání vlastního ústního projevu</li>
           <li><i class="fa-li fa fa-check"></i>Opakované přehrávání (poslech) vlastních nahrávek</li>
           <li><i class="fa-li fa fa-check"></i>Porovnání vlastních nahrávek s nahrávkami rodilých mluvčích (Listen&nbsp;&&nbsp;Talk)</li>
@@ -32,13 +87,13 @@
               <li>k podrobným údajům o průchodu kurzem</li>
             </ul>
           </li>
-        </ul>
+        </ul>-->
       </div>
       <div class="col-sm-1 text-info" style="padding-top:70px">
         <i class="fa fa-exclamation" style="font-size:100px"></i><br />
       </div>
     </div>
-    <div class="row">
+    <!--<div class="row">
       <div class="col-sm-12 text-center" style="padding-top:10px;">
         <b>
           <i class="fa fa-quote-left"></i>
@@ -46,13 +101,12 @@
           <i class="fa fa-quote-right"></i>
         </b>
       </div>
-    </div>
+    </div>-->
   </div>
 </div>
 
-<div class="container-fluid">
+<!--<div class="container-fluid">
   <div class="container">
-    <!--<h2>Nekupujte "zajíce v pytli"</h2>-->
     <div class="col-sm-6">
       <div class="panel panel-success">
         <div class="panel-heading">
@@ -77,8 +131,6 @@
             </li>
             <li>
               Dále nabízíme Prodloužené licence (až do konce školního roku <b>2018/2019</b>) nebo Unlimited licence.
-              <!--Pomocí našeho autorského nástroje si můžete snadno připravovat vlastní výuková data
-              jak pro tento systém, tak i pro vlastní kurzy a testy.-->
             </li>
             <li>
               Nabízíme i mnoho dalších jazykových kurzů a testů.
@@ -88,7 +140,7 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 
 
 <div class="container-fluid white">
