--- a/Web4/Schools/My.html
+++ b/Web4/Schools/My.html
@@ -27,7 +27,7 @@
     {{if isBlended() && tb.logoutAndProfile}}
     <div class="alert alert-warning">
       <h2 style="margin-top:0;">{{:~userName()}}, vítejte</h2>
-      Nejste to vy? V tom případě se někdo zapomněl odhlásit. Přejděte na jednu ze stránek <a href="">Facebook</a>, <a href="">Google</a> nebo <a href="">Microsoft</a> a proveďte odhlášení. 
+      Nejste to vy? V tom případě se někdo zapomněl odhlásit. Přejděte na jednu ze stránek <a target="_blank" href="http://www.facebook.com">Facebook</a>, <a target="_blank" href="http://www.google.cz">Google</a> nebo <a target="_blank" href="http://www.microsoft.com">Microsoft</a> a proveďte odhlášení. 
       Následně aktualizujte tuto stránku (tlačítkem F5) a přihlašte se pod vaším účtem.
     </div>
     {{/if}}
