osetrneni prazdne URL se strankou, index-*.html s isDebug a designId parametrem

--- a/WebCode/links.html
+++ b/WebCode/links.html
@@ -6,6 +6,10 @@
 </head>
 <body>
   <a href="schools/index-cs-cz.html">Local</a><br />
+  <a href="schools/index-cs-cz-true.html">Local, debug</a><br />
+  <a href="schools/index-cs-cz-true-skrivanek.html">Local, debug, Skrivanek</a><br />
   <a href="schools/index-cs-cz.html?a1y=b2c">Local force log</a><br />
+  <a href="schools/index-cs-cz-true.html?a1y=b2c">Force log, debug</a><br />
+  <a href="schools/index-cs-cz-true-skrivanek.html?a1y=b2c">Force log, debug, skrivanek</a><br />
 </body>
 </html>
