WebCommon, router finish, flux start

--- a/WebCommon/Common/uiRouter/index.html
+++ b/WebCommon/Common/uiRouter/index.html
@@ -7,7 +7,10 @@
   <script type="text/javascript" src="angularCommon.js"></script>
   <script type="text/javascript" src="routerCommon.js"></script>
   <script type="text/javascript" src="urlMatcherFactory.js"></script>
-  <script type="text/javascript" src="testRouter.js"></script>
+  <script type="text/javascript" src="router.js"></script>
+  <script type="text/javascript">
+    angular.testRouter();
+  </script>
 </head>
 <body>
 
