first flux version

--- a/WebCommon/Common/flux/Index.html
+++ b/WebCommon/Common/flux/Index.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="../../scripts/react-dom.js"></script>
   <script type="text/javascript" src="../../scripts/react-with-addons.js"></script>
   <script type="text/javascript" src="../../scripts/freezer.js"></script>
+  <script type="text/javascript" src="flux.js"></script>
 </head>
 <body>
   <div id="app"></div>
