--- a/WebCommon/Common/flux/Index.html
+++ b/WebCommon/Common/flux/Index.html
@@ -12,6 +12,10 @@
 </head>
 <body>
   <div id="app"></div>
+  <p>
+    <a href="#" onclick="flux.store.recordStart()">recordStart</a><br />
+    <a href="#" onclick="flux.store.play(flux.store.recordEnd(), 300, function(){alert('done')})">recordEnd and play</a><br />
+  </p>
   <script type="text/javascript" src="test.js"></script>
 </body>
 </html>
