--- a/WebCommon/Common/uiRouter/index.html
+++ b/WebCommon/Common/uiRouter/index.html
@@ -3,7 +3,7 @@
   <title></title>
   <meta charset="utf-8" />
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/core-js/1.2.5/core.js"></script>
-  <script type="text/javascript" src="../common.js"></script>
+  <script type="text/javascript" src="../common/common.js"></script>
   <script type="text/javascript" src="angularCommon.js"></script>
   <script type="text/javascript" src="routerCommon.js"></script>
   <script type="text/javascript" src="urlMatcherFactory.js"></script>
