--- a/WebCommon/Common/validation/Index.html
+++ b/WebCommon/Common/validation/Index.html
@@ -8,14 +8,11 @@
   <script type="text/javascript" src="../../scripts/react-with-addons.js"></script>
   <script type="text/javascript" src="../../scripts/freezer.js"></script>
   <script type="text/javascript" src="../common/common.js"></script>
-  <script type="text/javascript" src="flux.js"></script>
+  <script type="text/javascript" src="../flux/flux.js"></script>
+  <script type="text/javascript" src="../validation/validation.js"></script>
 </head>
 <body>
   <div id="app"></div>
-  <p>
-    <a href="#" onclick="flux.store.recordStart()">recordStart</a><br />
-    <a href="#" onclick="flux.store.play(flux.store.recordEnd(), 300, function(){alert('done')})">recordEnd and play</a><br />
-  </p>
   <script type="text/javascript" src="test.js"></script>
 </body>
 </html>
