--- a/WebCommon/Common/validation/Index.html
+++ b/WebCommon/Common/validation/Index.html
@@ -9,7 +9,8 @@
   <script type="text/javascript" src="../../scripts/freezer.js"></script>
   <script type="text/javascript" src="../common/common.js"></script>
   <script type="text/javascript" src="../flux/flux.js"></script>
-  <script type="text/javascript" src="../validation/validation.js"></script>
+  <script type="text/javascript" src="../validation/lib.js"></script>
+  <script type="text/javascript" src="../validation/components.js"></script>
 </head>
 <body>
   <div id="app"></div>
