--- a/WebCommon/Common/validation/Index.html
+++ b/WebCommon/Common/validation/Index.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="../common/common.js"></script>
   <script type="text/javascript" src="../flux/flux.js"></script>
   <script type="text/javascript" src="../validation/lib.js"></script>
-  <script type="text/javascript" src="../validation/components.js"></script>
+  <script type="text/javascript" src="../validation/templates.js"></script>
 </head>
 <body>
   <div id="app"></div>
