pred Typed actions

--- a/WebCommon/Common/uiRouter/index.html
+++ b/WebCommon/Common/uiRouter/index.html
@@ -8,11 +8,11 @@
   <script type="text/javascript" src="routerCommon.js"></script>
   <script type="text/javascript" src="urlMatcherFactory.js"></script>
   <script type="text/javascript" src="router.js"></script>
-  <script type="text/javascript">
-    uiRouter.testRouter();
-  </script>
 </head>
 <body>
-
+  <script type="text/javascript" src="test.js"></script>
+  <script type="text/javascript">
+    routerTest.testRouterLow();
+  </script>
 </body>
 </html>
