--- a/WebCommon/Common/login/index.html
+++ b/WebCommon/Common/login/index.html
@@ -18,6 +18,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="text/javascript" src="templateTest.js"></script>
+  <script type="text/javascript" src="test.js"></script>
 </body>
 </html>
