--- a/WebCommon/Common/flux/Index.html
+++ b/WebCommon/Common/flux/Index.html
@@ -13,8 +13,8 @@
 <body>
   <div id="app"></div>
   <p>
-    <a href="#" onclick="flux.store.recordStart()">recordStart</a><br />
-    <a href="#" onclick="flux.store.play(flux.store.recordEnd(), 300, function(){alert('done')})">recordEnd and play</a><br />
+    <a href="#" onclick="flux.recordStart()">recordStart</a><br />
+    <a href="#" onclick="flux.play(flux.recordEnd(), 300, function(){alert('done')})">recordEnd and play</a><br />
   </p>
   <script type="text/javascript" src="test.js"></script>
 </body>
