funkcni verze bez Freezer

--- a/WebCommon/Common/flux/Index.html
+++ b/WebCommon/Common/flux/Index.html
@@ -6,7 +6,6 @@
   <script type="text/javascript" src="../../scripts/react.js"></script>
   <script type="text/javascript" src="../../scripts/react-dom.js"></script>
   <script type="text/javascript" src="../../scripts/react-with-addons.js"></script>
-  <script type="text/javascript" src="../../scripts/freezer.js"></script>
   <script type="text/javascript" src="../common/common.js"></script>
   <script type="text/javascript" src="flux.js"></script>
 </head>
@@ -14,7 +13,7 @@
   <div id="app"></div>
   <p>
     <a href="#" onclick="flux.recordStart()">recordStart</a><br />
-    <a href="#" onclick="flux.play(flux.recordEnd(), 300, function(){alert('done')})">recordEnd and play</a><br />
+    <a href="#" onclick="flux.play(flux.recordEnd(), 300, function(){/*alert('done');*/})">recordEnd and play</a><br />
   </p>
   <script type="text/javascript" src="test.js"></script>
 </body>
