funkcni facebook login

--- a/WebCommon/Common/login/index.html
+++ b/WebCommon/Common/login/index.html
@@ -6,6 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <script type="text/javascript" src="../../common/closure/crypt.js"></script>
+  <script type="text/javascript" src="../../common/closure/crypt.js"></script>
+  <script type="text/javascript" src="../../common/closure/hash.js"></script>
+  <script type="text/javascript" src="../../common/closure/sha1.js"></script>
+  <script type="text/javascript" src="../../common/Common/crypt.js"></script>
+
   <script type="text/javascript" src="../../scripts/core.js"></script>
   <script type="text/javascript" src="../../scripts/react.js"></script>
   <script type="text/javascript" src="../../scripts/react-dom.js"></script>
