--- a/WebCommon/wwwroot/Common/lib/index.html
+++ b/WebCommon/wwwroot/Common/lib/index.html
@@ -6,18 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script type="text/javascript" src="../../common/closure/cookie.js"></script>
-  <script type="text/javascript" src="../../common/closure/crypt.js"></script>
-  <script type="text/javascript" src="../../common/closure/sha1.js"></script>
-
-  <script type="text/javascript" src="../../common/Common/encrypt.js"></script>
-
   <script type="text/javascript" src="../../scripts/core.js"></script>
   <script type="text/javascript" src="../../scripts/react-with-addons.js"></script>
-  <!--<script type="text/javascript" src="../../scripts/react.js"></script>-->
   <script type="text/javascript" src="../../scripts/react-dom.js"></script>
-
-  <script type="text/javascript" src="../common/common.js"></script>
+  <script type="text/javascript" src="../lib/common.js"></script>
   <script type="text/javascript" src="../flux/flux.js"></script>
   <script type="text/javascript" src="../layout/layout.js"></script>
 
@@ -27,12 +19,8 @@
   <script type="text/javascript" src="../uiRouter/routerCommon.js"></script>
   <script type="text/javascript" src="../uiRouter/urlMatcherFactory.js"></script>
   <script type="text/javascript" src="../uiRouter/router.js"></script>
-  <script type="text/javascript" src="../persist/persist.js"></script>
-
-  <script type="text/javascript" src="../../webconfig.js"></script>
 </head>
 <body>
-  <input type="text" value="" name="email" id="firstName" vcard_name="vCard.Email" autocomplete="on" placeholder="email"/>
   <div id="app"></div>
   <hr />
   <p>
